finished with the main part of the health section, also fixed the alignment for all the other sections

--- a/goals.css
+++ b/goals.css
@@ -4,7 +4,7 @@
   width: min(80%, 1200px);
   margin: 0 auto;
   margin-top: 5rem;
-  font-size: 0.8rem;
+  font-size: 0.5rem;
 }
 
 h1 {
