--- a/health.css
+++ b/health.css
@@ -26,11 +26,32 @@
 
 .dailyGoal {
   text-align: center;
-  margin-top: 2rem;
+  margin-top: 5rem;
 }
 
-button.add {
-  font-size: 2rem;
+button.add,
+button.clearButton {
+  font-size: 1rem;
+  background: none;
+  border: 1px black solid;
+  padding: 0.2em;
+}
+
+.addCalories {
+  display: flex;
+}
+
+.calorieCount {
+  width: 60px;
+  border-radius: 0;
+  border: 1px black solid;
+  border-right: none;
+}
+
+.healthFunctions {
+  display: flex;
+  width: min(80%, 1200px);
+  margin: 0 auto;
+  justify-content: space-evenly;
   margin-top: 3rem;
-  margin-left: 10rem;
 }
